# serializer version: 1
# name: test_setting_up_config[False]
  set({
    'ai_task',
    'air_quality',
    'alarm_control_panel',
    'analytics',
    'api',
    'application_credentials',
    'assist_pipeline',
    'assist_satellite',
    'auth',
    'backup',
    'backup.event',
    'backup.sensor',
    'battery',
    'binary_sensor',
    'brands',
    'button',
    'camera',
    'climate',
    'config',
    'conversation',
    'cover',
    'date',
    'datetime',
    'device_tracker',
    'diagnostics',
    'door',
    'doorbell',
    'event',
    'fan',
    'ffmpeg',
    'garage_door',
    'gate',
    'geo_location',
    'group',
    'hardware',
    'homeassistant',
    'homeassistant.scene',
    'http',
    'humidifier',
    'humidity',
    'illuminance',
    'image',
    'image_processing',
    'infrared',
    'intent',
    'labs',
    'lawn_mower',
    'light',
    'llm',
    'lock',
    'logger',
    'media_player',
    'media_source',
    'moisture',
    'motion',
    'network',
    'notify',
    'number',
    'occupancy',
    'person',
    'power',
    'radio_frequency',
    'remote',
    'repairs',
    'scene',
    'select',
    'sensor',
    'siren',
    'stt',
    'switch',
    'system_health',
    'system_log',
    'tag',
    'temperature',
    'text',
    'time',
    'tts',
    'update',
    'vacuum',
    'valve',
    'vibration',
    'wake_word',
    'water_heater',
    'weather',
    'web_rtc',
    'websocket_api',
    'window',
    'zone',
  })
# ---
# name: test_setting_up_empty_config[False]
  set({
    'ai_task',
    'air_quality',
    'alarm_control_panel',
    'analytics',
    'api',
    'application_credentials',
    'assist_pipeline',
    'assist_satellite',
    'auth',
    'backup',
    'backup.event',
    'backup.sensor',
    'battery',
    'binary_sensor',
    'brands',
    'button',
    'camera',
    'climate',
    'config',
    'conversation',
    'cover',
    'date',
    'datetime',
    'device_tracker',
    'diagnostics',
    'door',
    'doorbell',
    'event',
    'fan',
    'ffmpeg',
    'garage_door',
    'gate',
    'geo_location',
    'hardware',
    'homeassistant',
    'homeassistant.scene',
    'http',
    'humidifier',
    'humidity',
    'illuminance',
    'image',
    'image_processing',
    'infrared',
    'intent',
    'labs',
    'lawn_mower',
    'light',
    'llm',
    'lock',
    'logger',
    'media_player',
    'media_source',
    'moisture',
    'motion',
    'network',
    'notify',
    'number',
    'occupancy',
    'person',
    'power',
    'radio_frequency',
    'remote',
    'repairs',
    'scene',
    'select',
    'sensor',
    'siren',
    'stt',
    'switch',
    'system_health',
    'system_log',
    'tag',
    'temperature',
    'text',
    'time',
    'tts',
    'update',
    'vacuum',
    'valve',
    'vibration',
    'wake_word',
    'water_heater',
    'weather',
    'web_rtc',
    'websocket_api',
    'window',
    'zone',
  })
# ---
